# juce-cmake-template

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  distribution.xml  postinstall
.github/workflows/: pr_check.yml  release.yml
Resources/: component.plist  welcome.html
inc/: Editor.h  Processor.h
src/: Editor.cpp  Processor.cpp
